--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,34 @@
 :root {
   --accent-color: #2980b9;
   --bg-color: #222f3e;
-  --text-color: #333333;
+  --text-primary-color: #333;
+  --text-secondary-color: #5e5e5e;
+  --blockquote-bg-color: #eee;
+  --paper-bg-color: #fff;
+  --paper-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  --primary-font: "Open Sans", sans-serif;
+  --secondary-font: "Merriweather", serif;
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: var(--primary-font);
   font-size: 12pt;
-  color: var(--text-color);
+  color: var(--text-primary-color);
   background-color: var(--bg-color);
+  margin: 0;
 }
 
 a {
   text-decoration: none;
+}
+
+nav > a {
+  color: var(--text-secondary-color);
+  padding-left: 1em;
+  font-size: 1.2em;
+}
+
+em > a {
   color: inherit;
 }
 
@@ -29,7 +45,13 @@ em {
 
 h1 {
   font-size: 3em;
-  font-family: "Merriweather", serif;
+}
+
+h1, h2 {
+  font-family: var(--secondary-font);
+}
+
+h1, h2, h4 {
   margin: 0;
 }
 
@@ -43,27 +65,38 @@ li {
   list-style: square;
 }
 
-#paper-container {
+nav {
+  padding: 0.2in;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+#content-container {
   display: flex;
   justify-content: center;
 }
 
-#paper {
+#content {
   width: calc(7.5in - 0.4in);
-  height: calc(11in - 0.4in);
   margin: 0.25in;
   padding: 0.4in;
-  background: #fff;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.paper {
+  background-color: var(--paper-bg-color);
+  box-shadow: var(--paper-shadow);
 }
 
 @media print {
-  #paper {
+  #content {
     width: 8.5in;
-    height: 0;
     margin: 0;
     padding: 0;
     box-shadow: none;
+  }
+  nav {
+    display: none;
   }
   body {
     background: none;
@@ -71,11 +104,13 @@ li {
 }
 
 @media only screen and (max-width: 800px) {
-  #paper {
-    margin: 0;
+  #content {
+    margin: 3vw;
     padding: 0;
-    height: 0;
     box-shadow: none;
+  }
+  nav {
+    display: none;
   }
   body {
     background: none;
@@ -92,11 +127,22 @@ li {
   margin-bottom: 0.015in;
 }
 
-.section {
+.section, p {
   border-left: 1px solid var(--accent-color);
   padding-top: 0.025in;
   padding-bottom: 0.05in;
   padding-left: 0.1in;
+}
+
+blockquote {
+  color: var(--text-secondary-color);
+  border-left: 5px solid var(--accent-color);
+  background-color: var(--blockquote-bg-color);
+}
+
+blockquote p {
+  border: none;
+  padding-right: 0.1in;
 }
 
 .section-header {
