--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,7 @@
 <nav class="paper">
-    <h2>Colton Blake</h2>
+  <h2><a href="/">Colton Blake</a></h2>
+  <div class="nav-links">
     <a href="/">Resume</a>
     <a href="/2018/03/11/new-site">Blog</a>
+  </div>
 </nav>
