--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,11 @@
   --paper-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   --primary-font: "Open Sans", sans-serif;
   --secondary-font: "Merriweather", serif;
+  font-size: 12pt;
 }
 
 body {
   font-family: var(--primary-font);
-  font-size: 12pt;
   color: var(--text-primary-color);
   background-color: var(--bg-color);
   margin: 0;
@@ -20,15 +20,6 @@ body {
 
 a {
   text-decoration: none;
-}
-
-nav > a {
-  color: var(--text-secondary-color);
-  margin-left: 1em;
-  font-size: 1.2em;
-}
-
-em > a {
   color: inherit;
 }
 
@@ -39,12 +30,16 @@ hr {
 }
 
 em {
-  font-size: 0.9em;
+  font-size: 0.9rem;
   color: var(--accent-color);
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 3rem;
+}
+
+h2, h3 {
+  font-size: 1.2rem;
 }
 
 h1, h2 {
@@ -70,6 +65,20 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: baseline;
+}
+
+nav a {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  transition: color 0.2s ease;
+}
+
+nav .nav-links {
+  color: var(--text-secondary-color);
+}
+
+nav a:hover {
+  color: var(--accent-color);
 }
 
 #content-container {
@@ -114,6 +123,8 @@ nav {
   }
   body {
     background: none;
+  }
+  :root {
     font-size: 8pt;
   }
 }
@@ -156,6 +167,6 @@ blockquote p {
 }
 
 .right-align {
-  margin-left: 1em;
+  margin-left: 1rem;
   text-align: right;
 }
