--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
   --paper-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   --primary-font: "Open Sans", sans-serif;
   --secondary-font: "Merriweather", serif;
-  font-size: 12pt;
 }
 
 body {
@@ -16,6 +15,7 @@ body {
   color: var(--text-primary-color);
   background-color: var(--bg-color);
   margin: 0;
+  font-size: 12pt;
 }
 
 a {
@@ -30,16 +30,16 @@ hr {
 }
 
 em {
-  font-size: 0.9rem;
+  font-size: 0.9em;
   color: var(--accent-color);
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 3em;
 }
 
 h2, h3 {
-  font-size: 1.2rem;
+  font-size: 1.2em;
 }
 
 h1, h2 {
@@ -68,8 +68,8 @@ nav {
 }
 
 nav a {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   transition: color 0.2s ease;
 }
 
@@ -124,7 +124,7 @@ nav a:hover {
   body {
     background: none;
   }
-  :root {
+  #resume {
     font-size: 8pt;
   }
 }
@@ -167,6 +167,6 @@ blockquote p {
 }
 
 .right-align {
-  margin-left: 1rem;
+  margin-left: 1em;
   text-align: right;
 }
