--- a/style.css
+++ b/style.css
@@ -26,8 +26,12 @@ body {
   width: 8.5in;
   max-height: 11in;
   margin: auto;
-  @media not print {
-    padding: 0.5in;
+}
+
+@media not print {
+  body {
+    padding-top: 2em;
+    padding-bottom: 8em;
   }
 }
 
