--- a/style.css
+++ b/style.css
@@ -21,48 +21,47 @@
 }
 
 body {
-  font-size: 16px;
   line-height: 1.5;
-  width: 8.5in;
+  max-width: 8.5in;
   margin: auto;
 }
 
 @media not print {
   body {
-    padding: 0.5in;
+    padding: 3rem;
   }
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 3rem;
   color: var(--primary);
 }
 
 h2 {
-  font-size: 18px;
+  font-size: 1.125rem;
   color: var(--accent);
 }
 
 h3 {
-  font-size: 16px;
+  font-size: 1rem;
   color: var(--subtle);
 }
 
 section > header {
   border-bottom: 1px solid var(--subtle);
   text-transform: uppercase;
-  margin-top: 8px;
-  margin-bottom: 8px;
-  padding-bottom: 4px;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  padding-bottom: 0.25rem;
   color: var(--subtle);
 }
 
 .entry {
-  margin-bottom: 12px;
+  margin-bottom: 0.75rem;
 }
 
 header {
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
 }
 
 .row {
@@ -79,13 +78,13 @@ h3 {
 .setting {
   display: flex;
   color: var(--subtle);
-  gap: 18px;
+  gap: 1.125rem;
 }
 
 .setting > span {
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 0.25rem;
 }
 
 .material-icons {
