--- a/style.css
+++ b/style.css
@@ -20,8 +20,12 @@
   margin: 0;
 }
 
-body {
+html {
   line-height: 1.5;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
   max-width: 8.5in;
   margin: auto;
 }
