--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 }
 
 html {
+  font-size: 15px;
   line-height: 1.5;
   -webkit-text-size-adjust: 100%;
 }
@@ -32,7 +33,7 @@ body {
 
 @media not print {
   body {
-    padding: 3rem;
+    padding: 2rem;
   }
 }
 
@@ -51,6 +52,10 @@ h3 {
   color: var(--subtle);
 }
 
+body > header {
+  margin-bottom: 1rem;
+}
+
 section > header {
   border-bottom: 1px solid var(--subtle);
   text-transform: uppercase;
@@ -61,16 +66,18 @@ section > header {
 }
 
 .entry {
-  margin-bottom: 0.75rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
-header {
-  margin-bottom: 1rem;
+.entry > header {
+  margin-bottom: 0.5rem;
 }
 
 .row {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 h1,
@@ -81,14 +88,15 @@ h3 {
 
 .setting {
   display: flex;
+  flex-wrap: wrap;
   color: var(--subtle);
-  gap: 1.125rem;
+  column-gap: 1.125rem;
 }
 
 .setting > span {
   display: flex;
   align-items: center;
-  gap: 0.25rem;
+  column-gap: 0.25rem;
 }
 
 .material-icons {
