--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 
 html {
-  font-size: 15px;
+  font-size: 14px;
   line-height: 1.5;
   -webkit-text-size-adjust: 100%;
 }
@@ -101,4 +101,13 @@ h3 {
 
 .material-icons {
   font-size: inherit;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+strong {
+  color: var(--accent);
 }
